--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 <link href="jquery.mobile-1.4.2.min.css" rel="stylesheet" type="text/css"/>
 <link href="vapp.css" rel="stylesheet" type="text/css"/>
 
-<style>
-.vt_btn {width:20%;}
-</style>
 <script src="jquery-1.11.0.min.js" type="text/javascript"></script>
 <script src="jquery.mobile-1.4.2.min.js" type="text/javascript"></script>
 <script src="vapp.js" type="text/javascript"></script>
@@ -61,13 +58,13 @@
 	<div data-role="content" id="page2-content">
 	  <div class="ui-grid-b" id="grid_parties">
 	    <div class="ui-block-a"> <img src="img/bjp.png"></div>
-	    <div class="ui-block-b"><h2>Bhartiya Janata Party</h2></div>
+	    <div class="ui-block-b"><label>Bhartiya Janata Party</label></div>
 	    <div class="ui-block-c"><button>VOTE</button></div>
 	    <div class="ui-block-a"> <img src="img/congress.png"></div>
-	    <div class="ui-block-b"><h2>Indian National Congress</h2></div>
+	    <div class="ui-block-b"><label>Indian National Congress</label></div>
 	    <div class="ui-block-c"><button>VOTE</button></div>
         <div class="ui-block-a"> <img src="img/aap.png"></div>
-	    <div class="ui-block-b"><h2>Aam Aadmi Party</h2></div>
+	    <div class="ui-block-b"><label>Aam Aadmi Party</label></div>
 	    <div class="ui-block-c"><button>VOTE</button></div>
       </div>
 	  
