--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 </head> 
 <body> 
-
+</body>
+<div id="container">
 <div data-role="page" id="page">
 	<div data-role="header">
 		<h1>VotesApp</h1>
@@ -55,57 +56,7 @@
 	<div data-role="header">
 		<h1>VotesApp</h1>
 	</div>
-	<div data-role="content" id="page2-content">
-	<!--
-      <div class="ui-grid-b" id="grid_parties">
-	    <div class="ui-block-a"> <img src="img/bjp.png"></div>
-	    <div class="ui-block-b"><label>Bhartiya Janata Party</label></div>
-	    <div class="ui-block-c"><button>VOTE</button></div>
-	    <div class="ui-block-a"> <img src="img/congress.png"></div>
-	    <div class="ui-block-b"><label>Indian National Congress</label></div>
-	    <div class="ui-block-c"><button>VOTE</button></div>
-        <div class="ui-block-a"> <img src="img/aap.png"></div>
-	    <div class="ui-block-b"><label>Aam Aadmi Party</label></div>
-	    <div class="ui-block-c"><button >VOTE</button></div>
-      </div>
-	  -->
-      
-    <!--
-      <ul data-role="listview" data-split-icon="minus" data-split-theme="d" data-inset="true" id="list_parties">
-                <li><a class="readonly-state">
-                    <img src="img/bjp.png">
-                    <h2>Bhartiya Janata party</h2>
-                         <a href="#purchase" data-position-to="window" class="vt_btn">Purchase album</a>
-                </li>
-                <li><a  class="readonly-state">
-                    <img src="img/congress.png">
-                    <h2>Indian National Congress</h2>
-                     <a href="#purchase" data-rel="popup" data-position-to="window" data-transition="pop" class="vt_btn">Purchase album</a>
-                </li>
-                <li><a  class="readonly-state">
-                    <img src="img/aap.png">
-                    <h2>Aam Aadmi Party</h2>
-                    <a href="#purchase" data-rel="popup" data-position-to="window" data-transition="pop" class="vt_btn">Purchase album</a>
-                </li>
-            </ul>-->
-     <!--
-      <ul data-role="listview" data-split-icon="gear" data-split-theme="a" class="ui-listview">
-			<li class="ui-li-has-alt ui-li-has-thumb ui-first-child"><a href="index.html" class="ui-btn">
-				<img src="img/bjp.png">
-				<h3>Broken Bells</h3>
-				<p>Broken Bells</p>
-				</a><a href="#purchase" data-rel="popup" data-position-to="window" data-transition="pop" aria-haspopup="true" aria-owns="purchase" aria-expanded="false" class="ui-btn ui-btn-icon-notext ui-icon-gear ui-btn-a" title="Purchase album"></a>
-			</li>
-			<li class="ui-li-has-alt ui-li-has-thumb"><a href="index.html" class="ui-btn">
-
-				<img src="img/congress.png">
-				<h3>Warning</h3>
-				<p>Hot Chip</p>
-				</a><a href="#purchase" data-rel="popup" data-position-to="window" data-transition="pop" aria-haspopup="true" aria-owns="purchase" aria-expanded="false" class="ui-btn ui-btn-icon-notext ui-icon-gear ui-btn-a" title="Purchase album"></a>
-			</li>
-  		</ul>
-        -->
-            		
+	<div data-role="content" id="page2-content">            		
 	</div>
 	<div data-role="footer">
 		<h4>Page Footer</h4>
@@ -116,7 +67,7 @@
 	<div data-role="header">
 		<h1>Page Three</h1>
 	</div>
-	<div data-role="content">	
+	<div data-role="content" id="page3-content">	
 		Content		
 	</div>
 	<div data-role="footer">
@@ -136,5 +87,5 @@
 	</div>
 </div>
 
-</body>
+</div>
 </html>
